#3642 closed defect (fixed)
video filter "vignette" has memory leak
| Reported by: | coffey | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avfilter |
| Version: | git-master | Keywords: | vignette leak |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
I tried next command
ffplay -i foobar.mp4 -vf vignette
increase working memory and stoped by out of memory
libavfilter/vf_vignette.c line 271
in filter_frame() function.
insert af_frame_free(&in) before "return" to prevent memory leak.
old:
return ff_filter_frame(outlink, out);
new:
av_frame_free(&in);
return ff_filter_frame(outlink, out);
Attachments (1)
Change History (5)
comment:1 by , 12 years ago
comment:3 by , 12 years ago
| Resolution: | → fixed |
|---|---|
| Status: | new → closed |
Thank you, applied with a different commit message in 491d602283cdde8cf8623fbacf55066551c57ae3.
comment:4 by , 12 years ago
| Keywords: | leak added |
|---|
Note:
See TracTickets
for help on using tickets.



Erm, yeah you're right. Can you send a git format-patch or at least give your full name for correct authorship?