avfilter/vignette: fix input frame memory leak.

Fixes Ticket #3642.